# yafowil.plone

./: .gitignore  .travis.yml  CHANGES.rst  HISTORY.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  README.txt  all-widgets.cfg  base.cfg  buildout.cfg  constraints.txt  instance.yaml  mx.ini  plone-all-widgets.cfg  plone.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  versions.cfg
src/yafowil/: __init__.py
src/yafowil/plone/: __init__.py  common.py  config.py  configure.zcml  connectors.py  content.pt  example.pt  example.py  form.py  interfaces.py  meta.py  meta.zcml  plone4.py  plone5.py  resources.py  setuphandlers.py  testing.py  upgrades.zcml
src/yafowil/plone/autoform/: __init__.py  behavior.py  configure.zcml  directives.py  events.py  factories.py  form.py  indexer.py  persistence.py  schema.py
src/yafowil/plone/examples/: configure.zcml  view.pt  view.py
src/yafowil/plone/plone5/: glyphicons.css
src/yafowil/plone/profiles/autoform/: catalog.xml  metadata.xml  registry.xml
src/yafowil/plone/profiles/default/: registry.xml
src/yafowil/plone/profiles/demo/: browserlayer.xml  metadata.xml  registry.xml
src/yafowil/plone/profiles/demoresources/: metadata.xml  registry.xml
src/yafowil/plone/profiles/plone4/: browserlayer.xml
src/yafowil/plone/profiles/plone5/: registry.xml
src/yafowil/plone/resources/: bootstrap-icons.css  widgets.js  yafowil-fontello.css
src/yafowil/plone/resources/plone5/: widgets.js  yafowil-fontello.eot
src/yafowil/plone/tests/: __init__.py  test_autoform.py  test_autoform_directives.py  test_autoform_factories.py  test_autoform_form.py  test_autoform_immediate.py  test_autoform_schema.py  test_setup.py
src/yafowil/plone/widgets/: __init__.py  datetime.py  label.py  recurrence.py  relation.py  richtext.py  utils.py
src/yafowil/zope2/: __init__.py  configure.zcml  example.py  meta.py  meta.zcml  setuphandlers.py
