[metadata]
version = 4.0.0a4.dev0
name = yafowil.plone
description = Plone Integration with YAFOWIL
long_description = file: README.rst, CHANGES.rst, LICENCE.rst
keywords = zope plone request response html input widgets form
author = BlueDynamics Alliance
author_email = dev@bluedynamics.com
url = https://github.com/bluedynamics/yafowil.plone
license = BSD
classifiers =
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Addon
    Framework :: Plone :: 5.2
    Framework :: Plone :: 6.0
    Framework :: Zope
    Framework :: Zope :: 4
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
install_requires =
    setuptools>=39.1.0
    node>=1.0
    yafowil>2.3.2
    yafowil.bootstrap>1.999
    yafowil.yaml>=1.0.4
    Products.CMFPlone>=5.2

namespace_packages =
    yafowil
package_dir =
    = src
packages = find:
zip_safe = False

[options.extras_require]
test =
    plone.app.testing
    plone.app.robotframework

[options.packages.find]
where =
    src

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone
yafowil.plugin =
    register = yafowil.plone:register
    configure = yafowil.plone:configure

[isort]
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 88
not_skip = __init__.py
use_parentheses = True
multi_line_output = 3

[zest.releaser]
create-wheel = yes
